<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" >
    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/bottom_nav_home" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/baseline_favorite_border_24"
        android:title="@string/bottom_nav_favorite" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/baseline_shopping_cart_checkout_24"
        android:title="@string/bottom_nav_cart" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/bottom_nav_profile" />
</menu>