<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="signupFragment"
            type="com.example.e_commerce.ui.user.signup.SignupFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.login.LoginFragment">

        <ImageView
            android:id="@+id/appLogoImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/applogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appLogoImageView">

            <EditText
                android:id="@+id/nameEdittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/edittext_name_hint"
                android:paddingStart="10dp" />

            <EditText
                android:id="@+id/phoneNumberEdittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/edittext_phone_number_hint"
                android:maxLines="1"
                android:inputType="phone"
                android:paddingStart="10dp" />

            <EditText
                android:id="@+id/emailEdittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/login_email_edittext_hint"
                android:paddingStart="10dp" />

            <EditText
                android:id="@+id/passwordEdittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:maxLines="1"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/login_password_edittext_hint"
                android:paddingStart="10dp" />
        </LinearLayout>

        <Button
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{() -> signupFragment.signup()}"
            android:text="@string/button_text_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>