<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="loginFragment"
            type="com.example.e_commerce.ui.user.login.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.login.LoginFragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:text="@string/welcome"
                android:textColor="#40404C"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailEdittext"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/customedittext_bg"
                android:drawableStart="@drawable/usericon"
                android:hint="@string/login_email_edittext_hint"
                android:padding="5dp"
                android:paddingLeft="10dp"
                android:textColorHint="#B7B7C2" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="52dp"
                android:layout_marginStart="20dp"
                android:maxLines="1"
                android:lines="1"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/customedittext_bg"
                android:drawableStart="@drawable/unlock_icon"
                android:hint="@string/login_password_edittext_hint"
                android:paddingStart="10dp"
                android:textColorHint="#B7B7C2" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{() -> loginFragment.login()}"
            android:text="@string/button_text_login"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>